--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.container-fluid {
+html,
+body,
+header {
+  height: 100%;
   background-image: url("../public/imgs/music-library-background.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
@@ -10,24 +9,22 @@
   max-height: 100%;
 }
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-} */
+.App {
+  text-align: center;
+}
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
+.container-fluid {
+  /* background-image: url("../public/imgs/music-library-background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
+  max-height: 100%; */
+}
 
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
+.box {
+  /* max-width: 650px;
+  position: relative;
+  display: block;
+  top: 50%;
+  left: 50%; */
+}
