--- a/src/Components/DisplayMusic/DisplayMusic.css
+++ b/src/Components/DisplayMusic/DisplayMusic.css
@@ -1,11 +1,20 @@
 .allMusic {
+  top: 50%;
   margin: 1em;
-  margin-top: 2em;
+  margin-top: 4em;
+  margin-left: 4em;
   padding: 1em;
+  background-color: rgb(206, 251, 254) transparent;
 }
 
 .scrollable {
-  width: 600px;
-  height: 800px;
+  width: 100%;
+  height: 500px;
   overflow: scroll;
+  /* background-color: rgb(206, 251, 254) transparent; */
+  /* background-color: #cefbfc 54%; */
+}
+
+td {
+  font-size: 14px;
 }
