--- a/src/Components/WelcomeHeader/WelcomeHeader.css
+++ b/src/Components/WelcomeHeader/WelcomeHeader.css
@@ -21,7 +21,7 @@ p {
   margin-top: 4em;
   padding: 1em;
 
-  border: 1px;
+  /* border: 1px;
   border-style: solid;
-  border-color: crimson;
+  border-color: crimson; */
 }
