Updated SearchBar functionality, still needs fixing. bash: Updated: command not found

--- a/src/App.css
+++ b/src/App.css
@@ -13,18 +13,18 @@ header {
   text-align: center;
 }
 
-.container-fluid {
-  /* background-image: url("../public/imgs/music-library-background.jpg");
+/* .container-fluid {
+  background-image: url("../public/imgs/music-library-background.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   background-attachment: fixed;
-  max-height: 100%; */
-}
+  max-height: 100%;
+} */
 
-.box {
-  /* max-width: 650px;
+/* .box {
+  max-width: 650px;
   position: relative;
   display: block;
   top: 50%;
-  left: 50%; */
-}
+  left: 50%;
+} */
